syntax = "proto3";

package pos_protobuf;

import "pos/include/proto/handle.proto";

/*!
 *  \brief  binary format of POSHandle_CUDA_Context
 */
 message Bin_POSHandle_CUDA_Context {
    Bin_POSHandle base = 1;
}
